# Page-loader

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  ru-hexlet-io-courses.html
.github/workflows/: linter-check.yml  pytest-check.yml
page_loader/: __init__.py  cli.py  log.py  name.py  page_loader.py  resources.py  url.py
page_loader/scripts/: page_loader.py
tests/: test_download.py  test_url.py
tests/fixtures/: prettify_html.html  ru-hexlet-io-courses.html  ru-hexlet-io-courses.txt
tmp/: mosoblfil-ru-kollektivny-5184-ansambl-bayanistov-russkiy-tembr.html  mosoblfil-ru-kollektivny-kollektivy-.html  page-loader-hexlet-repl-co-.html  ru-hexlet-io-courses.html
tmp/mosoblfil-ru-kollektivny-5184-ansambl-bayanistov-russkiy-tembr_files/: mosoblfil-ru-bitrix-cache-js-s1-mof_template-kernel_main-kernel_main_v1.js?1661939348151609  mosoblfil-ru-bitrix-js-main-jquery-jquery-2.1.3.min.js?159326166584320  mosoblfil-ru-bitrix-templates-mof_template-bootstrap-js-bootstrap.min.js  mosoblfil-ru-bitrix-templates-mof_template-js-js.js
tmp/mosoblfil-ru-kollektivny-kollektivy-_files/: mosoblfil-ru--bitrix-cache-css-s1-mof_template-page_0fe8bcad89d863eb455e9965924968c7-page_0fe8bcad89d863eb455e9965924968c7_v1.css?1651591362387  mosoblfil-ru--bitrix-cache-css-s1-mof_template-template_a80c28fa66f06e96d1ebca78b3cccb45-template_a80c28fa66f06e96d1ebca78b3cccb45_v1.css?165159119251323  mosoblfil-ru--bitrix-cache-js-s1-mof_template-template_e83d9d45e0b15f789db777971c7ba65a-template_e83d9d45e0b15f789db777971c7ba65a_v1.js?16515911921031  (+2 more)
