[tool.poetry]
name = "hexlet-code"
packages = [
  { include = "page_loader" },
]
version = "0.1.0"
description = ""
authors = ["Marfa Nikitina"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^6.2.5"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"


[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
#requests-mock = "^1.9.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"
